Bug 448237 - 5.90 breaks installing KNS items with dependencies
Summary: 5.90 breaks installing KNS items with dependencies
Status: RESOLVED FIXED
Alias: None
Product: frameworks-frameworkintegration
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.90.0
Platform: Other Linux
: VHI normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords: regression
: 448259 448807 449240 449296 449553 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-01-10 22:59 UTC by faen mikkonen
Modified: 2025-02-26 18:31 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.91
Sentry Crash Report:


Attachments
unable to download theme (46.78 KB, image/png)
2022-01-10 22:59 UTC, faen mikkonen
Details
attachment-25352-0.html (1.34 KB, text/html)
2022-02-04 06:15 UTC, mv
Details
attachment-30028-0.html (1.07 KB, text/html)
2022-02-05 02:59 UTC, mv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description faen mikkonen 2022-01-10 22:59:25 UTC
Created attachment 145314 [details]
unable to download theme

STEPS TO REPRODUCE
1. boot endeavourOS running KDE
2. run system update via yay to 5.90
3. try to download a theme

OBSERVED RESULT
see attached image

EXPECTED RESULT
successfully downloading the theme

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: EndeavourOS
KDE Plasma Version: 5.23.5
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Comment 1 Nate Graham 2022-01-10 23:06:02 UTC
Can reproduce. The only commit in 5.90 is https://invent.kde.org/frameworks/frameworkintegration/-/commit/67d83907b30e8019a622277e6fad838d148934ba which looks related.
Comment 2 Nate Graham 2022-01-10 23:14:23 UTC
Actually that may have been a red herring. Reverting it doesn't fix the issue for me. Moving to KNS framework.
Comment 3 Nate Graham 2022-01-10 23:35:10 UTC
OK, this is weird.

Reverting https://invent.kde.org/frameworks/frameworkintegration/-/commit/67d83907b30e8019a622277e6fad838d148934ba in frameworksintegration fixes the issue if I also go back to https://invent.kde.org/frameworks/knewstuff/-/commit/f815d27b677be367dd84a2df2e290756a9cd9663 in knewstuff.

Going back to https://invent.kde.org/frameworks/knewstuff/-/commit/f815d27b677be367dd84a2df2e290756a9cd9663 knewstuff still fails if the frameworksintegration commit is present.

I don't know what to with that information.
Comment 5 Bug Janitor Service 2022-01-11 05:44:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/frameworkintegration/-/merge_requests/9
Comment 6 groot 2022-01-11 14:32:33 UTC
*** Bug 448259 has been marked as a duplicate of this bug. ***
Comment 7 Alexander Lohnau 2022-01-11 15:38:53 UTC
Git commit 675802e706a737c008aa74600ac804b06db52140 by Alexander Lohnau.
Committed on 11/01/2022 at 05:42.
Pushed by ngraham into branch 'master'.

Fix wrong porting of KNSCore::Engine::configSearchLocations

The `KNSCore::Engine::availableConfigFiles` method returns the file names, but
the code still assumed that the directories where the file is contained is returned.
Consequently the knsrc files would never be found.

M  +7    -8    src/kpackage-install-handlers/kns/main.cpp

https://invent.kde.org/frameworks/frameworkintegration/commit/675802e706a737c008aa74600ac804b06db52140
Comment 8 Nate Graham 2022-01-20 22:47:33 UTC
*** Bug 448807 has been marked as a duplicate of this bug. ***
Comment 9 Nate Graham 2022-01-27 20:49:10 UTC
*** Bug 449240 has been marked as a duplicate of this bug. ***
Comment 10 Nate Graham 2022-01-28 18:49:05 UTC
*** Bug 449296 has been marked as a duplicate of this bug. ***
Comment 11 Nate Graham 2022-02-03 18:23:01 UTC
*** Bug 449553 has been marked as a duplicate of this bug. ***
Comment 12 mv 2022-02-04 06:15:36 UTC
Created attachment 146246 [details]
attachment-25352-0.html

Sorry to bother you again. The fix for this issue will be done in next kde
update or i have to manually give fix it??

On Thu, 3 Feb 2022, 23:53 Nate Graham, <bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=448237
>
> Nate Graham <nate@kde.org> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>                  CC|                            |redknight205@gmail.com
>
> --- Comment #11 from Nate Graham <nate@kde.org> ---
> *** Bug 449553 has been marked as a duplicate of this bug. ***
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
Comment 13 Nate Graham 2022-02-04 14:31:57 UTC
The "Version fixed in" field has "5.91" in it, so that's the Frameworks version that will contain the fix.

I already asked distros to backport it several weeks ago, but evidently not all of them did.
Comment 14 mv 2022-02-05 02:59:16 UTC
Created attachment 146291 [details]
attachment-30028-0.html

Oh. Happy to hear that. Eagerly waiting.

On Fri, 4 Feb 2022, 20:01 Nate Graham, <bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=448237
>
> --- Comment #13 from Nate Graham <nate@kde.org> ---
> The "Version fixed in" field has "5.91" in it, so that's the Frameworks
> version
> that will contain the fix.
>
> I already asked distros to backport it several weeks ago, but evidently
> not all
> of them did.
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
Comment 15 Sirsendu Dutta 2025-02-20 08:46:27 UTC
this bug is appearing again in KDE Plasma 6.1.5 (Wayland) : Kubuntu oracular 24.10 
Way to reproduce the bug is exactly as described before.
i am not sure it is due to my system or kde plasma itself.
Comment 16 Nate Graham 2025-02-26 18:31:06 UTC
Probably your system or your older Plasma and Frameworks versions, as it works as expected for me with current git master using the original test case with the Qogir global theme.