Fix wrong porting of KNSCore::Engine::configSearchLocations

The `KNSCore::Engine::availableConfigFiles` method returns the file names, but
the code still assumed that the directories where the file is contained is returned.
Consequently the knsrc files would never be found.

BUG: 448237